<resources>
    <string name="app_name">Type of User:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Type of User:</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <!-- App Name -->
    <string name="app_name1">Build Sage</string>

    <!-- Slogan -->
    <string name="app_slogan">Design Your Dream Space</string>

    <!-- Button Labels -->
    <string name="featured_projects">Featured Projects</string>
    <string name="gallery">Gallery</string>
    <string name="explore">Explore</string>

    <!-- Content Descriptions -->
    <string name="app_logo_description">App Logo</string>

    <!-- Sample Project Names -->
    <string name="project_name_1">Elegant Living Room</string>
    <string name="project_name_2">Modern Kitchen</string>
    <string name="project_name_3">Cozy Bedroom</string>

</resources>